--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="first-section__left-wrapper">
           <img
             class="first-section__left-img"
-            src="icons/Woman.svg"
+            src="icons/woman.svg"
             alt="Женщина"
           />
         </div>
