--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             <div class="card__content card__content_back">
               <img class="card__img" src="icons/disco.png" alt="Клад" />
               <p class="card__description notosansMedium-paragraph">
-                Включил Rammstein на работе — начальник зашёл, увидел мой взгляд
-                и молча повысил зарплату!
+                Включила Rammstein на работе — начальник зашёл, увидел мой взгляд
+                и молча повысил зарплату! А потом ещё и кофе принёс, видимо, решил, что я теперь главная.
               </p>
             </div>
           </div>
@@ -189,7 +189,7 @@
             <div class="card__content card__content_back">
               <img class="card__img" src="icons/robot.svg" alt="Клад" />
               <p class="card__description notosansMedium-paragraph">
-                Познакомился с девушкой ИИ – теперь не понимаю, она сама пишет
+                Встретил девушку ИИ – теперь не понимаю, она сама пишет
                 сообщения или это уже работа искусственного интеллекта?
               </p>
             </div>
