--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <img class="card__img" src="icons/disco.png" alt="Клад" />
               <p class="card__description notosansMedium-paragraph">
                 Включила Rammstein на работе — начальник зашёл, увидел мой взгляд
-                и молча повысил зарплату! А потом ещё и кофе принёс, видимо, решил, что я теперь главная.
+                и молча повысил зарплату! А потом и кофе принёс, видимо, я теперь главная.
               </p>
             </div>
           </div>
