--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="text-section">
       <div class="text-section__text-container container">
         <h2 class="text-section__title barriecito-title color_black">
-          BEATIFUL / CUTE / LOVELY / PERFECT / RADIANT
+          BEAUTIFUL / CUTE / LOVELY / PERFECT / RADIANT
         </h2>
       </div>
     </section>
@@ -226,7 +226,7 @@
     <section class="text-section text-section_background-pink hidden">
       <div class="text-section__text-container container">
         <h2 class="text-section__title barriecito-title color_black">
-          BEATIFUL / CUTE / LOVELY / PERFECT / RADIANT
+          BEAUTIFUL / CUTE / LOVELY / PERFECT / RADIANT
         </h2>
       </div>
     </section>
@@ -303,7 +303,7 @@
     <section class="seventh-section hidden">
       <div class="seventh-section__content-container container">
         <h2 class="seventh-section__title montserrat-title color_black">
-          Ждём вас в 16:00 на встрече! А пока...
+          Ждём вас в 15:00 на встрече! А пока...
         </h2>
         <div class="seventh-section__qr-box qr-code">
           <img class="qr-code__img" src="icons/qr.svg" alt="QR" />
