--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Секция с текстом -->
     <section class="text-section">
       <div class="text-section__text-container container">
-        <h2 class="text-section__title barriecito-title color_black">
+        <h2 style="font-size:56px" class="text-section__title barriecito-title color_black">
           BEAUTIFUL / CUTE / LOVELY / PERFECT / RADIANT
         </h2>
       </div>
@@ -225,7 +225,7 @@
     <!-- Секция с текстом -->
     <section class="text-section text-section_background-pink hidden">
       <div class="text-section__text-container container">
-        <h2 class="text-section__title barriecito-title color_black">
+        <h2 style="font-size:56px" class="text-section__title barriecito-title color_black">
           BEAUTIFUL / CUTE / LOVELY / PERFECT / RADIANT
         </h2>
       </div>
